# noniid-fl-for-ecg-classification

./: centralized.py
federated/: pyproject.toml
federated/pytorchexample/: client_app.py  client_scaffold.py  dataloader.py  run_scaffold.py  server_app.py  server_scaffold.py  task.py
