[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated"
description = "FLECG"
version = "1.0.1"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-partitions = 10
num-server-rounds = 60
fraction-train = 0.2
fraction-evaluate = 0.1
local-epochs = 5
learning-rate = 0.0001
batch-size = 256
strategy = 'fedprox'
proxmu = 0.25
partitioning = "dirichlet"
val = 0.25
run_uid = "fedprox0.25-lep5-d0.25-2part"
